# Deep-School

./: .gitignore  README.md  VERSION_MANAGEMENT.md  git-auto-sync.sh  package-lock.json  package.json  version-cli.js  version.config.json
.github/workflows/: jscrambler-code-integrity.yml  static.yml
Archive/Asterisk/: README.md  package-lock.json  package.json
BOT/: model.py  package-lock.json  test.js
BOT/archive/: package-lock.json  test.js
BOT/bad_word_lib_node/: test.html
BOT/test/: dataset.convert.js  dataset.json  model.js  test.html
BOT/test_ml/: test.py
Client/: _redirects  eguide.html  index.html
Client/Site/: index.html  style.css
Client/js/: auth.js  auth.mjs  chat.dps.ap2.js  con.js  config.js  console.js  console.mjs  deps.js  estore.ui.js  lang.js  main.js  pickramu.dps.ap2.js  pickramu.js  scr.client.js  scr.client.mjs  security.js  setting.js  shell.js  ui.js
Client/public/: index.html  version.config.json
Client/re/: style.css
Deep-School_ICON.icon/: icon.json
DeepSchoolAppleSite/: index.html  style.css
DeepSchoolSite/: index.html  style.css
Pickramu/: compile_all.sh  txt2html.js
Pickramu/API/: chapter1.md  compile.n.js  complie.js  mathjax-cheatsheet.md  test.md  (+1 more)
UI-Test/: UI.test.1.html
asterp2p/: Cargo.toml  demo.code.js  package-lock.json  package.json
asterp2p/rust/: Cargo.toml
asterp2p/rust/src/: main.rs
deep-school-server/: package-lock.json
scripts/: compile-pickramu.mjs
server/: .env.example  package-lock.json  package.json  server.js  serverless.yml  staRt.linux.sh  staRt.sh  tsconfig.json  tune.sh
(+355 files in other folders)
