[package]
name = "p2p_network"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/main.rs"

[[bin]]
name = "p2p_network_bin"
path = "src/main.rs"
[dependencies]
webrtc-p2p = "0.1.0"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
imp = "0.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.0", features = ["full"] }